--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "preview": "npm run build && npm run preview:withoutBuild",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,css,md}\"",
     "preview:withoutBuild": "concurrently \"vite preview\" \"npm run ws\" --names \"frontend,backend\" --prefix-colors \"cyan,magenta\""
   },
   "dependencies": {
@@ -22,6 +24,7 @@
     "@mui/x-date-pickers": "^8.22.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-hook-form": "^7.68.0",
     "react-router-dom": "^7.11.0",
     "socket.io-client": "^4.8.1",
     "zustand": "^5.0.9"
@@ -39,6 +42,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "eslint-plugin-react-x": "^2.3.13",
     "globals": "^16.5.0",
+    "prettier": "^3.4.2",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.4",
     "vite": "^7.2.4"
