--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "install:all": "npm install && cd api && npm install",
     "dev": "vite",
+    "api": "cd api && npm run dev",
     "ws": "cd api && npm run ws",
-    "dev:all": "concurrently \"npm run dev\" \"npm run ws\" --names \"frontend,backend\" --prefix-colors \"cyan,magenta\"",
+    "dev:all": "concurrently \"npm run dev\" \"npm run api\" \"npm run ws\" --names \"frontend,rest-api,websocket\" --prefix-colors \"cyan,yellow,magenta\"",
     "preview": "npm run build && npm run preview:withoutBuild",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
@@ -23,6 +24,7 @@
     "@mui/material": "^7.3.6",
     "@mui/x-data-grid": "^8.22.1",
     "@mui/x-date-pickers": "^8.22.1",
+    "@tanstack/react-query": "^5.90.12",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-hook-form": "^7.68.0",
